[package]
name = "dan"
version = "0.1.0"
authors = ["Nathaniel Cook <nvcook42@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "dan"


[dependencies]
peg = "0.8"
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
itertools = "0.10"
log = "0.4"
env_logger = "0.9"
async-trait = "0.1"
chrono = "0.4"
structopt = { version = "0.3", default-features = false }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
[dependencies.mqtt-async-client]
version = "0.3"
default-features = false
[dependencies.async-std]
version = "1"
[patch.crates-io]
mqtt-async-client = { git = "https://github.com/nathanielc/mqtt-async-client-rs.git", branch = "drain_shutdown" }
