[package]
name = "dan"
version = "0.1.1"
authors = ["Nathaniel Cook <nvcook42@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Dan is a home automation programming langauge"
homepage = "https://github.com/nathanielc/dan"
repository = "https://github.com/nathanielc/dan"
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
name = "dan"

[build-dependencies]
lalrpop = "0.19.8"

[dependencies]
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
itertools = "0.10"
log = "0.4"
env_logger = "0.9"
async-trait = "0.1"
chrono = "0.4"
structopt = { version = "0.3", default-features = false }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
async-std = "1"
mqtt-async-client = {version ="0.3", default-features = false}
regex = "1"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
macro-map = { git = "https://github.com/masinc/macro-map-rust" }

[patch.crates-io]
mqtt-async-client = { git = "https://github.com/nathanielc/mqtt-async-client-rs.git", branch = "drain_shutdown" }
