[package]
name = "jim"
version = "0.1.0"
authors = ["Nathaniel Cook <nvcook42@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "jim"

[dependencies]
peg = "0.6"
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
itertools = "0.10"
log = "0.4"
env_logger = "0.9"
[dependencies.mqtt-async-client]
version = "0.3"
default-features = false
[dependencies.async-std]
version = "1"
